samples/_failures_safe/1761416767_b18668_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b28bbd5f.c: In function ‘main’:
./samples/SAFE/__tmp_b28bbd5f.c:167:16: error: missing terminating " character
  167 |         printf("No input provided.\n
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b28bbd5f.c:167:9: error: expected expression at end of input
  167 |         printf("No input provided.\n
      |         ^~~~~~
./samples/SAFE/__tmp_b28bbd5f.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b28bbd5f.c:167:9: error: expected declaration or statement at end of input
